# serializer version: 1
# name: test_entities[binary_sensor.contact-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.contact',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'serial-hdm:HomeMaticIP:contact1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.contact-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'door',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Contact',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.contact',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.contact_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.contact_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'serial-hdm:HomeMaticIP:contact2',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.contact_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'door',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Contact 2',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.contact_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.contact_2_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.contact_2_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'serial-hdm:HomeMaticIP:contact2_battery',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.contact_2_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'battery',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Contact 2',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.contact_2_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.contact_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.contact_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'serial-hdm:HomeMaticIP:contact1_battery',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.contact_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'battery',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Contact',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.contact_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.motion-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.motion',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'serial-hdm:HomeMaticIP:motion1_battery',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.motion-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'battery',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Motion',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.motion',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
